bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:5: error: type mismatch;
 found   : Unit
 required: Boolean
      sol = true
          ^NearHundred:7: error: type mismatch;
 found   : Unit
 required: Boolean
      sol = false
          ^NearHundred:11: error: type mismatch;
 found   : Unit
 required: Boolean
      sol = true
          ^NearHundred:13: error: type mismatch;
 found   : Unit
 required: Boolean
      sol = false
          ^