bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  var sol = false
  if (n <= 100) {
    if (n + 10 >= 100) {
      sol = true
    } else {
      sol = false
    }
  } else {
    if (n + 10 >= 200) {
      sol = true
    } else {
      sol = false
    }
  }
}